# cloudtower-api-doc-tauri

./: .gitignore  .npmrc  BRAND_CUSTOMIZATION_LOG.md  contribute.md  package-lock.json  package.json  readme.md  tsconfig.json  vitest.config.mjs  vitest.setup.mjs
.github/workflows/: ci-check.yml  deploy.yml  main.yml
astgrep-lint-rules/: markdown-lint.mjs  sgconfig.yml  sync-terminology.mjs
astgrep-lint-rules/rules/: no-terminology-ts.yml  no-terminology-tsx.yml  no-termonology-json.yml
astgrep-lint-rules/utils/: terminology.yml
cloudtower-api-doc/: babel.config.js  code-terminology.json  custom.scss  docusaurus.config.js  terminology.json  versions.json
cloudtower-api-doc/code_blocks/: CreateVmSnapshot.md  EnterMaintenanceMode.md  EnterMaintenanceModePrecheck.md  EnterMaintenanceModePrecheckResult.md  ExitMaintenanceMode.md  ExitMaintenanceModePrecheckResult.md  FormatVnc.md  FormatVncProxy.md  GetLunSnapshot.md  GetTask.md  GetToken.md  GetTokenResponse.md  GetVm.md  GetVmSnapshot.md  GetVnc.md  GetVncResponse.md  OpenVnc.md
cloudtower-api-doc/declerations/: SwaggerCloudTowerAPI1.9.0.ts  index.d.ts  swagger-api.ts
cloudtower-api-doc/docs/: api.md  intro.md
cloudtower-api-doc/scripts/: PATCH_USAGE.md  build-docs.js  build-docs.ts  calibrate-translations.js  commit.json  create-new-api-doc.js  create-new-api-example.js  create-new-version.js  describe.js  diff.js  generate-spec.js  generate-swagger-patches.js  generate.js  merge-json.js  scan-missing.js  scan-prisma.js  scan-swagger.js  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+1775 files in other folders)
